Sun Apr 04 17:19:08 2004  George Lebl <jirka@5z.com>

	* src/eval.c: when 'i' is used uninitialized then suggest using '1i'
	  instead

Sun Apr 04 16:35:38 2004  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: Make the console version be
	  translated though there are still utf-8 issues.  Also the welcome
	  string is now slightly different since gettext seemed to have a fit
	  with the escapes and all that.

Sun Apr 04 15:52:00 2004  George Lebl <jirka@5z.com>

	* src/calc.[ch], eval.c, src/funclib.c, src/graphing.c, src/matop.c,
	  src/mpwrap.[ch], src/plugin.c:  Cleanup and update the copyright
	  strings, add "gel_" to the print_etree functions.

	* src/eval.c: fix "number <=> string" which was returning completely
	  wrong answers

	* src/geniustests.txt: add tests for comparison

2004-04-03  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

Tue Mar 30 15:08:05 2004  George Lebl <jirka@5z.com>

	* Release 0.6.0

	* src/mpwrap.c: define G_MAXINT32 if not defined to allow compilation
	  with older glib

Tue Mar 30 14:56:27 2004  George Lebl <jirka@5z.com>

	* src/mpwrap.c: further optimization of the mp* free lists gets some
	  improvement mainly for floats.  Plus fix the mpf free list when
	  changing precision.

Tue Mar 30 11:36:13 2004  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch]: remove the NATIVEINT type and use mpz which is
	  slightly slower, however cache inited mpz/mpq/mpf(r) types which 
	  makes the code actually run a LOT faster then with NATIVEINT, at
	  least for the testcases I considered.  This also reduces code
	  complexity by quite a bit (removed 600+ loc) and furthermore
	  optimizes both mpq/mpf performance too.  Also some minor cleanup
	  and leak fixes.

	* src/geniustests.txt: add some more random tests that popped up
	  during testing of the above

Tue Mar 30 09:52:39 2004  George Lebl <jirka@5z.com>

	* lib/functions/Makefile.am, lib/functions/kernels.gel: