@@ -1,3 +1,8 @@
+Sun Apr 04 17:27:33 2004  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: when parsing errors occur print them before saying
+	  we couldn't parse anything.
+
 Sun Apr 04 17:19:08 2004  George Lebl <jirka@5z.com>
 
 	* src/eval.c: when 'i' is used uninitialized then suggest using '1i'
